Details
-
Type:
Bug
-
Status: Resolved
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: Impala 2.8.0
-
Fix Version/s: Impala 2.8.0
-
Component/s: Backend
-
Labels:
-
Target Version:
Description
PlanFragmentExecutor::Close() calls desc_tbl()->ClosePartitionExprs(). If Prepare() fails, desc_tbl() (which points to the RuntimeState member) may be nullptr.
Easy fix is to only call that method if desc_tbl() is not nullptr.