be/src/runtime/runtime-state.cc
@@ -306,4 +306,12 @@ void RuntimeState::UnregisterReaderContexts() {
   reader_contexts_.clear();
 }
 
+void RuntimeState::ReleaseResources() {
+  UnregisterReaderContexts();
+  if (desc_tbl_ != nullptr) desc_tbl_->ClosePartitionExprs(this);
+  if (filter_bank_ != nullptr) filter_bank_->Close();
+  if (resource_pool_ != nullptr) {
+    ExecEnv::GetInstance()->thread_mgr()->UnregisterPool(resource_pool_);
+  }
+}
 }
